Refactor test for days endpoint
